Bug 127118 - FILEOPEN DOCX Rotation formatting of long text falling on second page in tall merged cell lost
Summary: FILEOPEN DOCX Rotation formatting of long text falling on second page in tall...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2019-08-23 12:40 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-10 06:30 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (29.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-08-23 12:40 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the problem in Writer (129.79 KB, image/png)
2019-08-23 12:41 UTC, Gabor Kelemen (Collabora)
Details
Simplified example file from Word (19.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-10-09 11:56 UTC, NISZ LibreOffice Team
Details
Screenshot of the simplified document in Word and Writer side by side (92.56 KB, image/png)
2019-10-09 11:58 UTC, NISZ LibreOffice Team
Details
tb-lr equivalent (19.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-03-03 16:55 UTC, Miklos Vajna
Details
Simplified unit test document (10.57 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-09-08 08:32 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2019-08-23 12:40:16 UTC
Created attachment 153591 [details]
Example file from Word

In a user-created file from Word text in a cell rotated with 270° is not kept rotated in newer LO versions.


Steps to reproduce:
    1. Open attached file

Actual results:
The change tracked text in the leftmost column of the table has 0° rotation.

Expected results:
The text should be rotated 270°

LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

This rotation used to work in 6.2.

Adding CC to:  Miklos Vajna
Comment 1 Gabor Kelemen (Collabora) 2019-08-23 12:41:53 UTC
Created attachment 153592 [details]
Screenshot of the problem in Writer

Also the paragraphs in the cells get a larger spacing than in Word but that will be another bug :).
Comment 2 Miklos Vajna 2019-08-23 13:21:45 UTC
Could you please share the bisect result? Thanks.
Comment 3 Dieter 2019-08-30 07:46:50 UTC
I confirm it with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded
Comment 4 Gabor Kelemen (Collabora) 2019-08-30 08:10:03 UTC
Bibisected using bibisect-win64-6.3 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=8fdbda18b593e7014e44a0fd590bbf98d83258b7 
author: 	Miklos Vajna <vmiklos@collabora.com>
committer:	Miklos Vajna <vmiklos@collabora.com>
summary: sw btlr writing mode: implement DOCX filter 

Sorry about missing this out.
Comment 5 Miklos Vajna 2019-08-30 22:29:43 UTC
(In reply to Gabor Kelemen from comment #1)
> Also the paragraphs in the cells get a larger spacing than in Word but that
> will be another bug :).

A few observations:

1) As you write, the row height in the DOCX import result is wrong; DOC import result has the correct row height, which means that the btlr cell won't be split, so you don't see the problem.

2) It seems the bug is specific to split cells, not tracked changes.

3) It seems this is problematic with rotation in either direction, tbrl (rotate in the other direction) has the very same problem.
Comment 6 NISZ LibreOffice Team 2019-10-09 11:56:11 UTC
Created attachment 154864 [details]
Simplified example file from Word

Simplified example shows the problem without change tracking.

If part of the cell text falls to the next page then it is no longer rotated.
Comment 7 NISZ LibreOffice Team 2019-10-09 11:58:09 UTC
Created attachment 154865 [details]
Screenshot of the simplified document in Word and Writer side by side

Version: 6.4.0.0.alpha0+ (x86)
Build ID: 489eef894e7034873ad262f9dfca554022db1b09
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-10-01_23:43:38
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 8 Xisco Faulí 2020-02-27 16:06:20 UTC Comment hidden (obsolete)
Comment 9 Miklos Vajna 2020-03-03 16:55:01 UTC
Created attachment 158348 [details]
tb-lr equivalent

Test doc to show that this is a general problem with how Writer deals with rotated text, this time with the tbRl direction. Yes, this is a bug, sure, it makes sense to fix it, but the btLr work just uncovered this existing problem.
Comment 10 Miklos Vajna 2020-03-03 16:55:42 UTC
Adjusting keywords accordingly.
Comment 11 Commit Notification 2020-07-28 15:15:19 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30598199272db107c5dc863707685e4019ad471e

tdf#127118 sw layout: fix vertical mode in split cell

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 László Németh 2020-09-08 08:32:54 UTC
Created attachment 165255 [details]
Simplified unit test document
Comment 13 NISZ LibreOffice Team 2020-09-08 10:46:17 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: a3b4831208da615789bd1e2d5660dd130807f504
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 14 mikhail.machine 2025-02-10 06:30:43 UTC Comment hidden (obsolete)