tdf#127118 sw layout: fix vertical mode in split cell

Merged cells split between pages could lose
vertical direction.

Change-Id: I1bbf4becd11a72022f80c394b3da6483fe0d7e6d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99583
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>